src/objects/SPFRef__c.object
<CustomObject>
    <fields>
        <fullName>Appointments_Completed_By__c</fullName>
        <label>Appointments Completed By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CH_Reg_Submit_Date_End__c</fullName>
        <label>CH Reg Submit Date (End)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CH_Reg_Submit_Date_Start__c</fullName>
        <label>CH Reg Submit Date (Start)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Channel_Deal_Type__c</fullName>
        <label>Channel Deal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Channel Not Involved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown / Missing Reseller Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Associated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Initiated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claims_Accepted_Through__c</fullName>
        <label>Claims Accepted Through</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <formula>TEXT( CurrencyIsoCode )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_from_Reg_Date_to_Frst_Mtg_Qual_Date__c</fullName>
        <inlineHelpText>Opportunity.First Meeting Qualification Date must be within [X] days of the deal registration, i.e. Lead.CH Registration Submission Date.</inlineHelpText>
        <label>Days from RegDate to First Mtg Qual Date</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FMS__c</fullName>
        <label>First Meeting Source</label>
        <picklist>
            <picklistValues>
                <fullName>Channel Registration / EULFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List from Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Prospected by Sales / Cold Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responded to Mktg Program / Warm Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Image_Eval_Met__c</fullName>
        <defaultValue>&quot;/servlet/servlet.FileDownload?file=0158000000159Zw&quot;</defaultValue>
        <label>Image - Eval Met</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Eval_Not_Met__c</fullName>
        <defaultValue>&quot;/servlet/servlet.FileDownload?file=0158000000159Zt&quot;</defaultValue>
        <label>Image - Eval Not Met</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Eval_WIP__c</fullName>
        <defaultValue>&quot;/servlet/servlet.FileDownload?file=0158000000159Zv&quot;</defaultValue>
        <label>Image - Eval WIP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified / Meeting Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Contact / Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Under Review by AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration on Hold by AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <inlineHelpText>Reference for Payout Amount</inlineHelpText>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_Minimum__c</fullName>
        <label>Opportunity Stage (Minimum)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type_2__c</fullName>
        <label>Opportunity Type (2)</label>
        <picklist>
            <picklistValues>
                <fullName>New Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFR / Not For Resale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (parts, spares, services, etc)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type (1)</label>
        <picklist>
            <picklistValues>
                <fullName>New Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFR / Not For Resale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (parts, spares, services, etc)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payout_Amount_Range_0__c</fullName>
        <label>Payout Amount (Range 0)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payout_Amount_Range_1__c</fullName>
        <label>Payout Amount (Range 1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payout_Amount_Range_2__c</fullName>
        <label>Payout Amount (Range 2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payout_Amount_over__c</fullName>
        <inlineHelpText>Over Opportunity Amount</inlineHelpText>
        <label>Payout Amount (over)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payout_Amount_under__c</fullName>
        <inlineHelpText>Under or equal to Opportunity Amount</inlineHelpText>
        <label>Payout Amount (under)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SPIFF_Claim_Record_Type__c</fullName>
        <label>SPIFF Claim Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPIFF_Program_Name__c</fullName>
        <label>SPIFF Program Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPIFF_Reference_Record_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPIFF Reference Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tickle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For System Administration.</description>
        <inlineHelpText>For System Administration.</inlineHelpText>
        <label>Tickle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>delme_Opportunity_Owner__c</fullName>
        <label>delme Opportunity Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SPIFF Reference</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_SPIFF_References</fullName>
        <columns>NAME</columns>
        <columns>SPIFF_Program_Name__c</columns>
        <columns>SPIFF_Claim_Record_Type__c</columns>
        <columns>Status__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All SPIFF References</label>
    </listViews>
    <nameField>
        <displayFormat>SPFR-{0000}</displayFormat>
        <label>SPIFF Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPIFF References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>